--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Maha D</h1>
-    <a href="http://www.w3schools.com">This is a link</a>
+ <h1>Heading 1</h1>
+<h2>Heading 2</h2>
+<h3>Heading 3</h3>
+<h4>Heading 4</h4>
+<h5>Heading 5</h5>
+<h6>Heading 6</h6>
 
 </body>
 </html>
