--- a/index.html
+++ b/index.html
@@ -3,15 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Maha D</title>
 </head>
 <body>
- <h1>Heading 1</h1>
-<h2>Heading 2</h2>
-<h3>Heading 3</h3>
-<h4>Heading 4</h4>
-<h5>Heading 5</h5>
-<h6>Heading 6</h6>
+    <p>my name is labib </p>
+<!-- <img src="picture/photo.jepg" alt="Photo" width="500" height="600"> -->
+<img src="picture/photo.jpeg" alt="Photo" width="400" height="500">
 
 </body>
 </html>
